* UTIL type=address-/service-/tag-merger | optimisation if argument allowmergingwithupperlevel is used
* UTIL type=address-merger | introduce actions=mergenoghost

BUGFIX:
* UTIL type=rule | actions=src-add/src-add-from-file/dst-add/dst-add-from-file - move from error out to warning
* class Schedule | bugfix to display expired objects correctly

GENERAL:
* class EthernetInterface - reduce duplicate code


2.0.38 (20220426)
UTILS:
* UTIL type=playbook | improvements related to argument projectfolder=DIRECTORY
* UTIL type=html-merger - introduction | script to merge muliple HTML files, formerly created with actions=exportToExcel

BUGFIX:
* UTIL type=service | actions=exporttoexcel,FILE.HTML,resolvesrv - bugfix
* UTIL type=ALLMERGER _ bugfix for printing out information

GENERAL:
* UTIL - introduce new argument 'projectfolder' - to store all produced action files into this folder


2.0.37 (20220425)
UTILS:
* UTIL type=Rule | introduce 'filter=(timestamp-first-hit.fast < - 90 days)'
* UTIL type=rule | introduce actions=action-set:[ACTION] | supported Security Rule actions: 'allow','deny','drop','reset-client','reset-server','reset-both'
* UTIL type=service | introduce new additional argument actions=exporttoexcel,FILE.HTML,resolvesrv
* UTIL type=xml-issue | extend fix if Dynamic AddressGroup filter contains own tag
* class AddressGroup | extend validation if dynamic AddressGroup filter contains own tag objects
* UTIL type=addressgroup-/servicegroup-merger | add information for argument exportCSV

BUGFIX:
* UTIL type=address actions=delete 'filter=(object is.unused)' | bugfix for FW to not delete used objects - not fixed yet for Panorama
* class SecurityRule | bugfix for method 'API_setAction()'
* UTIL type=ALLMERGER | argument allowaddingmissingobjects - bugfix to support this argument in type=service-group
* class AddressGroup | method load_from_domxml() - extend validation to handle dynamic AddressGroup with empty filter

GENERAL:


2.0.36 (20220419)
UTILS: